fixed select display error on mobile

--- a/packages/scandipwa/src/component/FieldSelect/FieldSelect.style.scss
+++ b/packages/scandipwa/src/component/FieldSelect/FieldSelect.style.scss
@@ -67,7 +67,7 @@ $select-arrow-width: 14px !default;
         border-style: solid;
         border-width: 0 0 1px 1px;
         border-color: transparent;
-        // transition: 200ms max-height;
+        transition: 200ms max-height;
         will-change: max-height;
         max-height: 0;
         -webkit-overflow-scrolling: touch;
@@ -112,7 +112,7 @@ $select-arrow-width: 14px !default;
         padding: 0;
         margin: 0;
         z-index: 1;
-        // transition: 100ms max-height ease-in;
+        transition: 100ms max-height ease-in;
         will-change: max-height;
         max-height: $select-option-height;
         line-height: 36px;
